[package]
name = "libpefile"
version = "0.1.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
from_bytes = { path = "from_bytes" }
from_bytes_derive = { path = "from_bytes_derive" }
packed_size = { path = "packed_size" }
packed_size_derive = { path = "packed_size_derive" }
argparse = "0.2.2"
log = "0.4"
memmap = "0.7.0"
packed_struct = { version = "0.5", features=["byte_types_256"] }
simple_logger = "1.11.0"
byteorder = "1.4.3"
num-derive = "0.3.3"
num-traits = "0.2.14"
