[package]
name = "libpefile"
version = "0.2.1"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"
repository = "https://github.com/janstarke/libpefile"
description = "library to parse PE files (only iterating over MESSAGE_TABLE entries is supported at the moment)"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libpefile"

[dependencies]
from_bytes = "0.1.0"
from_bytes_derive = "0.1.0"
log = "0.4"
memmap = "0.7.0"
packed_struct = { version = "0.5", features=["byte_types_256"] }
byteorder = "1.4.3"
num-derive = "0.3.3"
num-traits = "0.2.14"
encoding_rs = "0.8.28"
