[package]
name = "from_bytes"
version = "0.1.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_size = { path = "../packed_size" }
packed_size_derive = { path = "../packed_size_derive" }
