[package]
name = "from_bytes"
version = "0.1.1"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"
repository = "https://github.com/janstarke/libpefile"
description = "create from_bytes() and packed_size() to read binary data into structs"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duplicate = "0.2.9"
